switch package base64 to work in 1.6